[package]
name = "derivadex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
web3 = "0.18.0"
rust_decimal = "1.28.1"
rust_decimal_macros = "1.28"
displaydoc = "0.2"
thiserror = "1.0.31"
serde = { version = "1.0.152", features = ["derive"] }
serde_repr = "0.1.10"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
